Fixed layout issue when there is a day difference

--- a/client/src/components/itinerary/Itinerary.css
+++ b/client/src/components/itinerary/Itinerary.css
@@ -1,7 +1,7 @@
 .itinerary {
 	background: white;
-	padding: 25px;
-	margin: 20px;
+	padding: 10px;
+	margin: 10px;
 	border-radius: 6px;
 	box-shadow: 0px 2px 6px #C5C3CB;
 }
